Fix to FF scrollbar styling

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -144,7 +144,7 @@ body {
 }
 
 body {
-  scrollbar-color: #333;
+  scrollbar-color: #777 #333;
 }
 
 ::-webkit-scrollbar {
